# serx

./: .gitignore  pyproject.toml
serx/: bot.py
serx/core/: settings.py
serx/core/data/: backup.sql
serx/core/database/: dbworker.py
serx/core/filters/: main.py
serx/core/handlers/: date.py  market.py  nomenclature.py  view.py
serx/core/keyboards/: inline.py  reply.py
serx/core/keyboards/date/: inline.py
serx/core/keyboards/nomenclature/: inline.py
serx/core/middlewares/: dbsession.py
serx/core/utils/: decorators.py  info.py  menu.py
serx/parser/: clean_data.ipynb
serx/parser/data/: nomenclature.csv  place.csv
