[tool.poetry]
name = "serx"
version = "0.1.0"
description = ""
authors = ["Nikooo Adamov <adamov.nikooo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
asyncpg = "^0.29.0"
environs = "^9.5.0"
pandas = "^2.1.3"
pydantic = "^2.5.2"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
